ACOLITE section added

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -100,3 +100,7 @@
 \newacronym{aot}{AOT}{aerosol optical thickness}
 
 \newacronym{usgs}{USGS}{U.S. Geological Survey}
+
+\newacronym{rbins}{RBINS}{Royal Belgian Institute of Natural Sciences}
+
+\newacronym{acolite}{ACOLITE}{Atmospheric Correction for OLI lite}
