--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -853,6 +853,7 @@ One of the known limitations of the approach is that the data set is mostly repr
 \section{ACOLITE}
 \label{subsec:acolite}
 
+The \gls{acolite} package is a binary distribution for processing Lansat 8 imagery developed by the \gls{rbins} (more info \url{http://odnature.naturalsciences.be/remsem/software-and-data/acolite}). \gls{acolite}'s main use is the atmospheric correction for OLI data. It applies the atmospheric correction algorithms based on \cite{Gordon:1994}. The atmospheric correction used is described in \cite{Vanhellemont2014} and \cite{Vanhellemont:2015}. \gls{acolite} generates products as RGB images for TOA, after Rayleigh correction, and atmospherically corrected. It also generates Level 2 output, such as marine reflectance and multiple scattering aerosol reflectance.
 
 
 
