Part of challenges in RS of C2 waters

--- a/Objectives.tex
+++ b/Objectives.tex
@@ -105,5 +105,5 @@ Third, while there are other global water constituent concentrations products, L
 This research also contributes to the field of remote sensing by developing a novel approach to correct the atmospheric effect in Landsat 8 images over Case 2 waters via the developed \gls{mobelm}. In spite of the fact that the ELM method is widely used to correct satellite image, it needs measurements in the field that are not always available. We developed the \gls{mobelm} algorithm that overcomes this issue by estimating these measurements. Additionally, the standard atmospheric correction algorithms were tested over Case 2 waters, and they were compared with {\it in situ} data in order to compare with the \gls{mobelm}. This made this study one of the first to compare with {\it in situ} data. The same applies for the retrieval algorithm.
 
 Finally, a dataset is made available for potential water quality studies through this research. Landsat 8 collects images all around the world where there is land including fresh and coastal waters. Such wide-reaching temporal and spatial coverage is not being broadly exploited for water quality studies.
-
+\todo{talk about preparation for other satellites: Sentinel 2 and Hyspiri}
 The background material necessary to attain these goals is described in the following chapter.
