--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -148,9 +148,8 @@
 \setlength{\marginparwidth}{2cm}
 
 % Added 11-15-13 ----------------------------------------
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
-% \includeonly{Background_and_Theory} 
-% \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory} 
+% \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Summary,Results,Appendix}
 \usepackage{tikz} % for flow charts
   \usetikzlibrary{shapes,shapes.geometric,arrows,positioning,shadows,calc}
 
