--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -846,7 +846,7 @@ The \gls{oc2} algorithm utilized just a green and a blue band. Modifications to 
     % \vspace{1.5cm}
     \centerline{(b)}\medskip
   \end{minipage}
-  \caption{Empirical algorithms for the chlorophyll-{\it a} concentration for \gls{seawifs}. (a) $R_{555}^{490}$ versus $\tilde{C}_a$ and OC2v4 model (solid curve). (b) $R_{555}^{443}>R_{555}^{490}>R_{555}^{510}$ versus $\tilde{C}_a$ and OC4v4 model (solid curve). These empirical algorithms were developed over a data set of $N=2804$ data points. \label{fig:chlemp} } 
+  \caption{Empirical algorithms for the chlorophyll-{\it a} concentration for \gls{seawifs}. (a) $R_{555}^{490}$ versus $\tilde{C}_a$ and OC2v4 model (solid curve). (b) $R_{555}^{443}>R_{555}^{490}>R_{555}^{510}$ versus $\tilde{C}_a$ and OC4v4 model (solid curve). These empirical algorithms were developed over a data set of $N=2804$ data points (Figures taken from \cite{OReilly2000}). \label{fig:chlemp} } 
 \end{figure}
 
 One of the known limitations of the approach is that the data set is mostly representative of Case 1 waters and not few Case 2 waters \cite{OReilly2000}. Some modification for low $C_a$ values have been suggested by \cite{Hu:2012fv}.
@@ -865,56 +865,70 @@ The \gls{acolite} package is a binary distribution for processing Lansat 8 image
 % ----------------------------------------------------
 \section{Challenges in the remote sensing of Case 2 waters}
 
+The single-variable models used for Case 2 waters do not work on Case 2 waters since at least three relevant quantities can vary independently of each other. This implies that we cannot assume a one-to-one relation between optical properties and the pigment concentration \cite{IOCCG2000_Coastal} anymore. Therefore, the algorithms for the retrieval of CPAs for Case 2 waters need to address non-linear, spectrally-varying interactions. For example, at some wavelengths, two or more constituents could affect the water-leaving signal in a similar manner, making difficult to differentiate among them. Also, the change in signal with change in concentration of CPAs are often very small, and therefore, it is difficult to guarantee the quality and reliability of the extracted information, a fact that becomes even worst with atmospheric effect.
 
-\cite{IOCCG2000_Coastal}
+Furthermore, higher particulate matter concentration, either phytoplankton or inorganic material, typical of coastal waters, could change the assumption for atmospheric correction based on \cite{Gordon:1994} of negligible water signal in the NIR. In order to apply similar approaches, we are forced to use longer wavelengths, which in general are more noisy bands, affecting the quality of the atmospheric correction, and therefore the retrieval.
+
+If we want to study areas that have direct influences in human activities, such a coastal areas, rivers, or lakes, the need for higher spatial resolution is a must in order to resolve complex transition land-water contours\todo{contour? geometry? geography?}. Because this water are located near to land area, the adjacency effect need to be taken in consideration too.
+
+\autoref{fig:OneCPAfixed} shows water true color simulated in Hydrolight for different concentrations CPAs.
 
 \begin{figure}[htb]
-\centering
-      \includegraphics[width=12cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CDOMfixed}
-      \caption{.\label{fig:CDOMfixed} } 
-\end{figure}
-
-\begin{figure}[htb]
-\centering
-      \includegraphics[width=12cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_TSSfixed}
-      \caption{.\label{fig:TSSfixed} } 
+  \begin{minipage}[c]{0.48\linewidth}
+    \centering
+      \includegraphics[width=7cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CDOMfixed}\\
+      \centerline{(a)}\medskip
+  \end{minipage}     
+      \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+    \centering
+      \includegraphics[width=7cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_TSSfixed}\\
+      \centerline{(b)}\medskip
+  \end{minipage}
+      \caption{Simulated water color with (a) fixed \gls{cdom} absorption coefficient at $\lambda=440nm$, $a_{CDOM}(440)$ and variable \gls{tss} and chlorophyll-{\it a} concentrations, and (b) fixed .\label{fig:OneCPAfixed}}
 \end{figure}
 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedlow.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedlow.png}\\
+      \centerline{(a)}\medskip
     \end{minipage}
       % \caption{.\label{fig:OCedu_CHLfixedlow} } 
    \hfill   
    \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedmed.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedmed.png}\\
+      \centerline{(b)}\medskip
   \end{minipage}    
       % \caption{.\label{fig:OCedu_CHLfixedmed} } 
   \begin{minipage}[c]{1.0\linewidth}
     \centering
-      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}\\
+      \centerline{(c)}\medskip
   \end{minipage}    
-      \caption{.\label{fig:OCedu_CHLfixed} }
+      \caption{Fixed chlorophyll-{\it a} concentration, $C_a$, and variable sediments and CDOM for (a) low $C_a$, (b) medium $C_a$ and (c) high $C_a$ .\label{fig:OCedu_CHLfixed} }
 \end{figure}
 
 \begin{figure}[htb]
-\centering
-      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/ChlStandardFixed.png}
-      \caption{.\label{fig:ChlStandardFixed} } 
-\end{figure}
-
-\begin{figure}[htb]
-\centering
-      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/ChlStandardNoFixed.png}
-      \caption{.\label{fig:ChlStandardNoFixed} } 
+  \begin{minipage}[c]{0.48\linewidth}
+    \centering
+      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/ChlStandardFixed.png}\\
+      \centerline{(a)}\medskip
+  \end{minipage}
+  \hfill      
+  \begin{minipage}[c]{0.48\linewidth}
+    \centering
+      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/ChlStandardNoFixed.png}\\
+      \centerline{(b)}\medskip
+  \end{minipage}
+      \caption{$C_a$ versus blue green band ratio for the OC3 and OC2v4 standard model compared with Hydrolight simulated data for (a) fixed and (b) variable sediment and CDOM.\label{fig:ChlStandardFixedAntNot} } 
 \end{figure}
 
 \begin{figure}[htb]
 \centering
       \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/SmallConcImpact.png}
-      \caption{.\label{fig:SmallConcImpact} } 
+      \caption{Hydrolight simulated remote-sensing reflectance for $C_a$ concentration differences at high level and low levels.\label{fig:SmallConcImpact} } 
 \end{figure}
 
 % \section{State of the Research}
