--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -815,6 +815,7 @@ The \gls{seadas} software (more info: \url{http://seadas.gsfc.nasa.gov/}) is a c
 A number of standard products are supported by the \gls{obpg} at NASA's Goddard Space Flight Center (\url{http://oceancolor.gsfc.nasa.gov/}). The \gls{obpg}'s responsibilities are collection, processing, calibration, validation, archive and distribution of ocean-related products from a large number of operational, satellite-based remote-sensing missions providing ocean color, sea surface temperature and sea surface salinity data to the international research community. Most of the ocean-related products are included in the \gls{seadas} package, supported by the \gls{obpg}. The following section describes some of the products relevant to this research.
 
 \subsection{Chlorophyll-{\it a} Concentration}
+\label{subsec:chlempirical}
 
 The chlorophyll-{\it a} concentration retrieval algorithms supported by \gls{seadas} are described in \cite{OReilly1998_Chl} and \cite{OReilly2000}. These include semianalytic models and empirical algorithms. The semianalytic models are based on the $b_b/(a + b_b)$ to $R_{rs}$ relationship \cite{Gordon:1988qv}. The empirical algorithms are based in band ratios \cite{OReilly2000}. One example of a empirical algorithm is the \gls{oc2} algorithm developed for \gls{seawifs}. The \gls{oc2} algorithm establishes an empirical equation relating \gls{rrs} in the $490$ and $555nm$ bands to chlorophyll-{\it a} concentrations $C_a$ from a large data set of coincident {\it in situ} remote-sensing reflectances and chlorophyll-{\it a} concentrations, $\tilde{R}_{rs}$ and $\tilde{C}_a$. This empirical equation is a \gls{mcp} defined as
 \begin{equation}\label{eq:oc2}
@@ -860,19 +861,12 @@ One of the known limitations of the approach is that the data set is mostly repr
 
 The \gls{acolite} package is a binary distribution for processing Lansat 8 imagery developed by the \gls{rbins} (more info \url{http://odnature.naturalsciences.be/remsem/software-and-data/acolite}). \gls{acolite}'s main use is the atmospheric correction for OLI data. It applies the atmospheric correction algorithms based on \cite{Gordon:1994}. The atmospheric correction used is described in \cite{Vanhellemont2014} and \cite{Vanhellemont:2015}. \gls{acolite} generates products as RGB images for TOA, after Rayleigh correction, and atmospherically corrected. It also generates Level 2 output, such as marine reflectance and multiple scattering aerosol reflectance.
 
-
-
 % ----------------------------------------------------
 \section{Challenges in the remote sensing of Case 2 waters}
 
 The single-variable models used for Case 2 waters do not work on Case 2 waters since at least three relevant quantities can vary independently of each other. This implies that we cannot assume a one-to-one relation between optical properties and the pigment concentration \cite{IOCCG2000_Coastal} anymore. Therefore, the algorithms for the retrieval of CPAs for Case 2 waters need to address non-linear, spectrally-varying interactions. For example, at some wavelengths, two or more constituents could affect the water-leaving signal in a similar manner, making difficult to differentiate among them. Also, the change in signal with change in concentration of CPAs are often very small, and therefore, it is difficult to guarantee the quality and reliability of the extracted information, a fact that becomes even worst with atmospheric effect.
 
-Furthermore, higher particulate matter concentration, either phytoplankton or inorganic material, typical of coastal waters, could change the assumption for atmospheric correction based on \cite{Gordon:1994} of negligible water signal in the NIR. In order to apply similar approaches, we are forced to use longer wavelengths, which in general are more noisy bands, affecting the quality of the atmospheric correction, and therefore the retrieval.
-
-If we want to study areas that have direct influences in human activities, such a coastal areas, rivers, or lakes, the need for higher spatial resolution is a must in order to resolve complex transition land-water contours\todo{contour? geometry? geography?}. Because this water are located near to land area, the adjacency effect need to be taken in consideration too.
-
-\autoref{fig:OneCPAfixed} shows water true color simulated in Hydrolight for different concentrations CPAs.
-
+\autoref{fig:OneCPAfixed} shows water true color simulated in Hydrolight for different concentration of CPAs but one of them fixed. A fixed set of {\it in situ} IOPs was used as input to Hydrolight, for different level of CPAs concentrations. The RGB bands of the remote-sensing reflectance outputs from these Hydrolight runs were utilized to generate the figures (\autoref{fig:OneCPAfixed}). It can be seen that for fixed concentration of CPAs, the variability of even one CPA impacts dramatically the water color. This fact demonstrates that not only the pigment concentration impacts the water color, but also the rest of the components, as opposed to the Case 1 water case, where the rest of the components are correlated with the pigment concentration. \autoref{fig:OCedu_CHLfixed} shows similar effect, where for fixed chlorophyll-{\it a} concentration, the variability in sediments and CDOM produces different spectrum. Also, varying chlorophyll-{\it a} from low, medium to high level, the spectrum fluctuate, even for the same set of sediment and CDOM. 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
@@ -885,7 +879,7 @@ If we want to study areas that have direct influences in human activities, such 
       \includegraphics[width=7cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_TSSfixed}\\
       \centerline{(b)}\medskip
   \end{minipage}
-      \caption{Simulated water color with (a) fixed \gls{cdom} absorption coefficient at $\lambda=440nm$, $a_{CDOM}(440)$ and variable \gls{tss} and chlorophyll-{\it a} concentrations, and (b) fixed .\label{fig:OneCPAfixed}}
+      \caption{Simulated water color with (a) fixed \gls{cdom} absorption coefficient at $\lambda=440nm$, $a_{CDOM}(440)$ and variable sediments and chlorophyll-{\it a} concentrations, and (b) fixed sediments and variable CDOM and chlorophyll-{\it a} concentrations.\label{fig:OneCPAfixed}}
 \end{figure}
 
 \begin{figure}[htb]
@@ -893,15 +887,13 @@ If we want to study areas that have direct influences in human activities, such 
     \centering
       \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedlow.png}\\
       \centerline{(a)}\medskip
-    \end{minipage}
-      % \caption{.\label{fig:OCedu_CHLfixedlow} } 
+    \end{minipage} 
    \hfill   
    \begin{minipage}[c]{0.48\linewidth}
     \centering
       \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedmed.png}\\
       \centerline{(b)}\medskip
   \end{minipage}    
-      % \caption{.\label{fig:OCedu_CHLfixedmed} } 
   \begin{minipage}[c]{1.0\linewidth}
     \centering
       \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}\\
@@ -909,6 +901,14 @@ If we want to study areas that have direct influences in human activities, such 
   \end{minipage}    
       \caption{Fixed chlorophyll-{\it a} concentration, $C_a$, and variable sediments and CDOM for (a) low $C_a$, (b) medium $C_a$ and (c) high $C_a$ .\label{fig:OCedu_CHLfixed} }
 \end{figure}
+\autoref{fig:SmallConcImpact} shows the effect of different level of chlorophyll-{\it a} in the spectral remote-sensing reflectance for low ($[5-10] \mu g/L$) and high ($[60-65]\mu/L$) level. It can be seen that the same relative difference has different impacts at low and high levels of chlorophyll-{\it a} concentration. There are more differences at level than a high levels.
+\begin{figure}[htb]
+\centering
+      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/SmallConcImpact.png}
+      \caption{Hydrolight simulated remote-sensing reflectance for $C_a$ concentration differences at high level and low levels.\label{fig:SmallConcImpact} } 
+\end{figure}
+
+The standard empirical retrieval algorithms described in \cite{OReilly2000} (\S\ref{subsec:chlempirical}) were developed for Case 1 waters. The same approach cannot be used in the Case 2 waters due to the variability of each component. This is illustrated in \autoref{fig:ChlStandardFixedAntNot}, where the OC3 and OC2v4 models are compared with simulated Hydrolight data. \autoref{fig:ChlStandardFixedAntNot}.(a) shows the case when only the chlorophyll-{\it a} concentration is varying, showing a good agreement with the empirical algorithms. On the other hand, \autoref{fig:ChlStandardFixedAntNot}.(b) shows the case when the not only the chlorophyll-{\it a} concentration varies, but all the CPAs. It can be concluded that the empirical models do not fit for all cases. These is one of the reason why new approaches need to be developed.
 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
@@ -925,11 +925,9 @@ If we want to study areas that have direct influences in human activities, such 
       \caption{$C_a$ versus blue green band ratio for the OC3 and OC2v4 standard model compared with Hydrolight simulated data for (a) fixed and (b) variable sediment and CDOM.\label{fig:ChlStandardFixedAntNot} } 
 \end{figure}
 
-\begin{figure}[htb]
-\centering
-      \includegraphics[width=8cm]{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPHD/Images/SmallConcImpact.png}
-      \caption{Hydrolight simulated remote-sensing reflectance for $C_a$ concentration differences at high level and low levels.\label{fig:SmallConcImpact} } 
-\end{figure}
+Furthermore, higher particulate matter concentration, either phytoplankton or inorganic material, typical of coastal waters, could change the assumption for atmospheric correction based on \cite{Gordon:1994} of negligible water signal in the NIR. In order to apply similar approaches, we are forced to use longer wavelengths, which in general are more noisy bands, affecting the quality of the atmospheric correction, and therefore the retrieval.
+
+Finally, if we want to study areas that have direct influences in human activities, such a coastal areas, rivers, or lakes, the need for higher spatial resolution is a must in order to resolve complex transition land-water contours\todo{contour? geometry? geography?}. Because this water are located near to land area, the adjacency effect need to be taken in consideration too.
 
 % \section{State of the Research}
 
