--- a/javier_bib.bib
+++ b/javier_bib.bib
@@ -695,6 +695,19 @@ The most interaction between humankind and water occurs in coastal and inland wa
   Date-modified            = {2012-12-13 14:57:24 +0000}
 }
 
+@Article{Lee2005_Kd,
+  Title                    = {Diffuse attenuation coefficient of downwelling irradiance: An evaluation
+   of remote sensing methods},
+  Author                   = {Lee, Z.P. and Darecki, M. and Carder, K.L. and Davis, C.O. and Stramski, D. and Rhea, W.J.},
+  Journal                  = {JOURNAL OF GEOPHYSICAL RESEARCH-OCEANS},
+  Year                     = {2005},
+  Volume                   = {110},
+
+  Doi                      = {10.1029/2004JC002573},
+  Owner                    = {Aixa},
+  Timestamp                = {2015.10.10}
+}
+
 @Article{Lee2002_invQAA,
   Title                    = {Deriving inherent optical properties from water color: a multiband quasi-analytical algorithm for optically deep waters},
   Author                   = {Lee, Z. P. and Carder, K. L. and Arnone, R. A.},
