First commit from Javier Laptop with El Capitan from branch masterElCapitan

--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -148,7 +148,7 @@
 \setlength{\marginparwidth}{2cm}
 
 % Added 11-15-13 ----------------------------------------
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology} 
+\includeonly{Acronyms,Introduction,Objectives} 
 % \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Summary,Results,Appendix}
 
 \usepackage{tikz} % for flow charts
@@ -368,7 +368,7 @@ Mis amados viejitos, Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes
 %\bibliographystyle{unsrtnat}
 \bibliographystyle{apalike}
 
-\bibliography{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPhD/javier_bib}
+\bibliography{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/javier_bibPhD}
 
 \printindex
 \addcontentsline{toc}{chapter}{Index}
